<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:background="@color/white"
        android:text="@string/Registro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/ObtenerRut"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Rut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="postalCode"

        />

    <EditText
        android:id="@+id/ObtenerNombre"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_margin="52dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Nombre"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/ObtenerRut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="5dp"
        />

    <EditText
        android:id="@+id/ObtenerApellido"
        android:layout_width="400dp"
        android:hint="@string/Apellido"
        android:layout_height="50dp"
        android:layout_margin="52dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObtenerNombre"
        tools:layout_editor_absoluteX="16dp"
        />

    <EditText
        android:id="@+id/ObtenerFecha"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Fecha"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObtenerApellido"
        />

    <EditText
        android:id="@+id/ObtenerHora"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Hora"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObtenerFecha"
        />

    <Button
        android:id="@+id/BotonRegistro"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:text="@string/Boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObtenerHora"
        />

    <Button
        android:id="@+id/ObtenerConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonRegistro" />


</androidx.constraintlayout.widget.ConstraintLayout>